# knums-tool-new

./: .gitignore  Cargo.toml  Makefile  README.md
builtins/: types.knum
builtins/types/: hdl.knum  int.knum  result.knum  uuid.knum
src/: ast.rs  imt_builder.rs  lexer.rs  lib.rs  main.rs  parser.rs
